fix: interior scrollbar deleted and fixed blocked scrollbar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,7 +31,6 @@ body {
   padding: 1rem 1rem;
   border-radius: 0.75rem;
   box-shadow: 0 2px 9px rgba(0, 0, 0, 0.07);
-  overflow-x: hidden;
 }
 
 /* ===== HEADER ===== */
@@ -280,7 +279,7 @@ pre {
 /* Mobile: imagen se adapta al ancho de visor */
 @media (max-width: 600px) {
   .container {
-    width: 100vw;
+    width: 100%;
     max-width: none;
     margin: 0;
     padding: 1rem 1rem;
